--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,6 @@
 .card {
 
     &:hover {
-        box-shadow: 0 0 20px rgba(33,33,33,.2); 
+        box-shadow: 0 0 20px rgba(112, 164, 241, 0.747); 
     } 
 }
