--- a/css/style.scss
+++ b/css/style.scss
@@ -2,6 +2,6 @@
 
     &:hover {
         box-shadow: 8px 8px 15px rgba(112, 164, 241, 0.747); 
-        border: 2px solid  rgba(79, 127, 199, 0.747);
+        border: 3px outset  rgba(79, 127, 199, 0.747);
     } 
 }
